[package]
edition      = "2024"
name         = "hal-luminance"
rust-version = "1.88"
version      = "0.1.0"

[[bin]]
name = "hal-luminance"
path = "./src/bin/main.rs"
test = false

[[test]]
harness = false
name    = "hello_test"

[lib]
test = false

[dependencies]
esp-hal = { version = "~1.0", features = ["esp32", "unstable"] }
esp-println = { version = "0.16.1", features = ["esp32"] }
esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32"] }
embedded-hal = "1.0.0"
critical-section = "1.2.0"
esp-alloc        = { version = "0.9.0"}
panic-rtt-target = { version = "0.2.0"}
rtt-target       = { version = "0.6.2"}

[dev-dependencies]
embedded-test = { version = "0.7.0", features = [
  "xtensa-semihosting",
] }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
